--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ ul li::before{
     height: 28px;
     width: 28px;
     border-radius: 50%;
-    background-image: url(images/unchecked.png);
+    background-image: url(unchecked.png);
     background-size: cover;
     background-position: center;
     position: absolute;
@@ -105,7 +105,7 @@ ul li::before{
 }
 
 .checked::before{
-    background-image: url(images/checked.png);
+    background-image: url(checked.png);
 }
 
 ul li span{
